Correct FB Address

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,15 +9,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>Nan is a PhD student in Bioinformatics Group at Michigan State University since Spring 2015. His research interests include bioinformatics, data mining, and machine learning. He focuses on designing and implementing efficient, highly scalable algorithms to correct the erroneous reads from large scale next generation sequencing data. He got his Bachelor from Fudan University in 2011 and Master from Michigan State University in 2015, respectively.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
+                    <p>After graduate, Nan hope to find a position likes Machine Learning Engineer or Data Scientist in high-tech company worldwide. </p>
                 </div>
             </div>
         </div>
