--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,6 +18,9 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
+					<li class="page-scroll">
+                        <a href="#portfolio">Experience</a>
+                    </li>
                     <li class="page-scroll">
                         <a href="#portfolio">Portfolio</a>
                     </li>
