--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,7 +19,7 @@
                         <a href="#page-top"></a>
                     </li>
 					<li class="page-scroll">
-                        <a href="#portfolio">Experience</a>
+                        <a href="#experience">Experience</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#portfolio">Portfolio</a>
