--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
     <body id="page-top" class="index">
     {% include nav.html %}
     {% include header.html %}
+	{% include experience.html %}
     {% include portfolio_grid.html %}
     {% include about.html %}
 
