--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -14,6 +14,20 @@
                 <div class="col-lg-4">
                     <p>After graduate, Nan hope to find a position likes Machine Learning Engineer or Data Scientist in high-tech company worldwide. </p>
                 </div>
+
             </div>
+            <!-- Duplicate these resume-item elements and edit accordingly for each job you want to add here -->
+            <div class="resume-item">
+              <h3 class="resume-item-title">Springfield Nuclear Power Plant</h3>
+              <h4 class="resume-item-details">Safety Inspector &bull; Nov, 1980 &mdash; Present</h4>
+              <p class="resume-item-copy">Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points:</p>
+              <ul class="resume-item-list">
+                <li>Ate lots of donuts</li>
+                <li>Fell asleep rarely</li>
+                <li>Left promptly at end of day (sometimes earlier)</li>
+              </ul>
+              <p class="resume-item-copy">If you're going to copy paste markup, or edit it, just be sure to keep the appropriate classnames on your new elements for styling purposes.</p>
+
+            </div><!-- end of resume-item -->
         </div>
     </section>
