--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -7,27 +7,17 @@
                     <hr class="star-light">
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>Nan is a PhD student in Bioinformatics Group at Michigan State University since Spring 2015. His research interests include bioinformatics, data mining, and machine learning. He focuses on designing and implementing efficient, highly scalable algorithms to correct the erroneous reads from large scale next generation sequencing data. He got his Bachelor from Fudan University in 2011 and Master from Michigan State University in 2015, respectively.</p>
-                </div>
-                <div class="col-lg-4">
-                    <p>After graduate, Nan hope to find a position likes Machine Learning Engineer or Data Scientist in high-tech company worldwide. </p>
-                </div>
-
-            </div>
             <!-- Duplicate these resume-item elements and edit accordingly for each job you want to add here -->
             <div class="resume-item">
-              <h3 class="resume-item-title">Springfield Nuclear Power Plant</h3>
-              <h4 class="resume-item-details">Safety Inspector &bull; Nov, 1980 &mdash; Present</h4>
-              <p class="resume-item-copy">Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points:</p>
+              <h3 class="resume-item-title">Department of Computer Science and Engneering, Michigan State University</h3>
+              <h4 class="resume-item-details">Graduate Research Assistant, Bioinformatics &bull; Jan, 2015 &mdash; Present &bull; Supervisor: Yanni Sun</h4>
+              <p class="resume-item-copy">Using various algorithm and data skill to develop tools for DNA sequece analysis:</p>
               <ul class="resume-item-list">
-                <li>Ate lots of donuts</li>
-                <li>Fell asleep rarely</li>
-                <li>Left promptly at end of day (sometimes earlier)</li>
+                <li>Develop new tools that combining Hidden Markov Model with
+                  consensus alogorithm from directed acyclic graph. We hope this
+                   tool can be utilized to improve the accuracy of NGS for
+                    homology search/li>
               </ul>
-              <p class="resume-item-copy">If you're going to copy paste markup, or edit it, just be sure to keep the appropriate classnames on your new elements for styling purposes.</p>
-
             </div><!-- end of resume-item -->
         </div>
     </section>
