--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -16,7 +16,7 @@
                 <li>Develop new tools that combining Hidden Markov Model with
                   consensus alogorithm from directed acyclic graph. We hope this
                    tool can be utilized to improve the accuracy of NGS for
-                    homology search/li>
+                    homology search </li>
               </ul>
             </div><!-- end of resume-item -->
         </div>
