change experience part style

--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -1,10 +1,10 @@
  <!-- Experience Section -->
-    <section class="success" id="experience">
+    <section id="experience">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Experience</h2>
-                    <hr class="star-light">
+                    <hr class="star-primary">
                 </div>
             </div>
             <!-- Duplicate these resume-item elements and edit accordingly for each job you want to add here -->
@@ -23,7 +23,7 @@
             <div class="resume-item">
               <h3 class="resume-item-title">Laboratory for Ultrafast Nanoscale Imaging and Spectroscopy, Michigan State University</h3>
               <h4 class="resume-item-details">Graduate Research Assistant &bull; Jan, 2013 &mdash; Dec, 2014 &bull; Supervisor: Chong-Yu Ruan </h4>
-              <p class="resume-item-copy">Developing new ultrafast electron microscopy system to research ultrafast trasition in phtsics system:</p>
+              <p class="resume-item-copy">Developing new ultrafast electron microscopy system to research ultrafast trasition in physics system:</p>
               <ul class="resume-item-list">
                 <li>Try to achieve the femtosecond level temporal resolution with 10 to 6 electrons per pulse. </li>
                 <li>By strongly focus our electron beam we can achieve 1000 electrons per pulse per micrometer square dose, which is the highest number report for ultrafast electron diffraction system. </li>
