Add eduaction part

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,6 +21,9 @@
 					<li class="page-scroll">
                         <a href="#experience">Experience</a>
                     </li>
+					<li class="page-scroll">
+                        <a href="#education">Education</a>
+                    </li>
                     <li class="page-scroll">
                         <a href="#portfolio">Portfolio</a>
                     </li>
