--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
     {% include nav.html %}
     {% include header.html %}
 	{% include experience.html %}
+	{% include education.html %}
     {% include portfolio_grid.html %}
     {% include about.html %}
 
