--- a/_includes/education.html
+++ b/_includes/education.html
@@ -3,33 +3,33 @@
        <div class="container">
            <div class="row">
                <div class="col-lg-12 text-center">
-                   <h2>Experience</h2>
+                   <h2>Education</h2>
                    <hr class="star-light">
                </div>
            </div>
            <!-- Duplicate these resume-item elements and edit accordingly for each job you want to add here -->
            <div class="resume-item">
-             <h3 class="resume-item-title">Computer Science and Engneering, Michigan State University</h3>
-             <h4 class="resume-item-details">Graduate Research Assistant, Bioinformatics &bull; Jan, 2015 &mdash; Present &bull; Supervisor: Yanni Sun</h4>
-             <p class="resume-item-copy">Using various algorithm and data skill to develop tools for DNA sequece analysis:</p>
+             <h3 class="resume-item-title">Michigan State University</h3>
+             <h4 class="resume-item-details">Ph. D., Computer Science &bull; Sep, 2015 &mdash; Present </h4>
              <ul class="resume-item-list">
-               <li>Develop new tools that combining Hidden Markov Model with
-                 consensus alogorithm from directed acyclic graph. We hope this
-                  tool can be utilized to improve the accuracy of NGS for
-                   homology search. </li>
              </ul>
            </div><!-- end of resume-item -->
            <!-- Duplicate these resume-item elements and edit accordingly for each job you want to add here -->
            <div class="resume-item">
-             <h3 class="resume-item-title">Laboratory for Ultrafast Nanoscale Imaging and Spectroscopy, Michigan State University</h3>
-             <h4 class="resume-item-details">Graduate Research Assistant &bull; Jan, 2013 &mdash; Dec, 2014 &bull; Supervisor: Chong-Yu Ruan </h4>
-             <p class="resume-item-copy">Developing new ultrafast electron microscopy system to research ultrafast trasition in physics system:</p>
+             <h3 class="resume-item-title">Michigan State University</h3>
+             <h4 class="resume-item-details">M. Sc., Physics &bull; Sep, 2012 &mdash; May, 2015 </h4>
              <ul class="resume-item-list">
-               <li>Try to achieve the femtosecond level temporal resolution with 10 to 6 electrons per pulse. </li>
-               <li>By strongly focus our electron beam we can achieve 1000 electrons per pulse per micrometer square dose, which is the highest number report for ultrafast electron diffraction system. </li>
-               <li>This can be used to probe either nano scale crystals or single shot diffraction with large sample. </li>
-               <li>Using mean-field approximation to simulate the trajectrorys of electron in the system. </li>
-               <li>Polish user-interface for the operation software of new system. </li>
+               <li>GPA: 3.6/4.0 </li>
+             </ul>
+           </div><!-- end of resume-item -->
+           <!-- Duplicate these resume-item elements and edit accordingly for each job you want to add here -->
+           <div class="resume-item">
+             <h3 class="resume-item-title">Fudan University</h3>
+             <h4 class="resume-item-details">B. Sc., Physics &bull; Sep, 2007 &mdash; May, 2011 </h4>
+             <ul class="resume-item-list">
+               <li>GPA: 3.3/4.0 </li>
+               <li>Excellent Student, Fudan University </li>
+               <li>Excellent New Student Scholarship, Fudan University </li>
              </ul>
            </div><!-- end of resume-item -->
        </div>
