--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,13 +12,19 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-4">
-                    <p>Nan is a PhD student in Bioinformatics Group at Michigan State University since Spring 2015. His research interests include bioinformatics, data mining, and machine learning. He focuses on designing and implementing efficient, highly scalable algorithms to correct the erroneous reads from large scale next generation sequencing data. He got his Bachelor from Fudan University in 2011 and Master from Michigan State University in 2015, respectively.</p>
-                </div>
-                <div class="col-lg-4">
-                    <p>After graduate, Nan hope to find a position likes Machine Learning Engineer or Data Scientist in high-tech company worldwide. </p>
-                </div>
-            </div>
+            <!-- Duplicate these resume-item elements and edit accordingly for each job you want to add here -->
+            <div class="resume-item">
+              <p class="resume-item-copy">Nan is a PhD student in Bioinformatics
+                Group at Michigan State University since Spring 2015. His
+                research interests include bioinformatics, data mining, and
+                machine learning. He focuses on designing and implementing
+                efficient, highly scalable algorithms to correct the erroneous
+                reads from large scale next generation sequencing data. He got
+                his Bachelor from Fudan University in 2011 and Master from
+                Michigan State University in 2015, respectively.</p>
+              <p class="resume-item-copy">After graduate, Nan hope to find a
+                position likes Machine Learning Engineer or Data Scientist
+                in high-tech company worldwide.</p>
+            </div><!-- end of resume-item -->
         </div>
     </header>
