--- a/_includes/summary.html
+++ b/_includes/summary.html
@@ -1,6 +1,12 @@
 <!-- Experience Section -->
    <section class="success" id="summary">
        <div class="container">
+         <div class="row">
+             <div class="col-lg-12 text-center">
+                 <h2>Summary</h2>
+                 <hr class="star-light">
+             </div>
+         </div>
          <!-- Duplicate these resume-item elements and edit accordingly for each job you want to add here -->
          <div class="resume-item">
            <p class="resume-item-copy">Nan is a PhD student in Bioinformatics
