--- a/_includes/summary.html
+++ b/_includes/summary.html
@@ -1,5 +1,5 @@
 <!-- Experience Section -->
-   <section class="success" id="summary">
+   <section id="summary">
        <div class="container">
          <div class="row">
              <div class="col-lg-12 text-center">
