--- a/_includes/education.html
+++ b/_includes/education.html
@@ -1,5 +1,5 @@
 <!-- Experience Section -->
-   <section class="success" id="education">
+   <section id="education">
        <div class="container">
            <div class="row">
                <div class="col-lg-12 text-center">
