change star color

--- a/_includes/summary.html
+++ b/_includes/summary.html
@@ -4,7 +4,7 @@
          <div class="row">
              <div class="col-lg-12 text-center">
                  <h2>Summary</h2>
-                 <hr class="star-light">
+                 <hr class="star-primary">
              </div>
          </div>
          <!-- Duplicate these resume-item elements and edit accordingly for each job you want to add here -->
